--- a/styles/app.css
+++ b/styles/app.css
@@ -7,10 +7,19 @@
   margin-right: 20px;
 }
 
+img {
+  width: 100px;
+  height: 140px;
+}
+
 .covered {
   background-color: black;
 }
 
 .hand {
   overflow: auto;
+}
+
+body {
+  background: green;
 }
